TAG: lib_py_report-6-0-4-2
TAG: lib_py_reports-6-0-4-1
DATE: 04/29/2016
STAFF: lec
CHANGES: TR12069/postgres cleanup
1) convert to Git
2) add "db.setAutoTranslate"

TAG: lib_py_report-6-0-2-1
DATE: 12/08/2015
STAFF: kstone

TAG: lib_py_report-6-0-1-1
DATE: 11/03/2015
STAFF: kstone
CHANGES:
1) TR12070 - GO annotation extensions
2) GO isoforms

TAG:  lib_py_report-6-0-1-?
DATE: 10/19/2015
STAFF: lec
CHANGES:
1) TR12124/column 17/go_isoforms.py

TAG:  lib_py_report-6-0-0-2
TAG:  lib_py_report-6-0-0-1
DATE: 07/22/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG:  lib_py_report-5-2-2-1
DATE: 07/06/2015
STAFF: dbm
CHANGES:
1) reportlib.py: Always use findmice URL for IMSR link

TAG:  lib_py_report-5-0-0-4
DATE: 05/31/2012
STAFF: lec
CHANGES:
1) TR11094/create_accession_anchor

TAG:  lib_py_report-5-0-0-3
DATE: 04/11/2012
STAFF: lec
CHANGES:
1) TR11027; changes for MGI 5.0: fix
create_accession_anchor
create_imsrstrain_anchor
2) postgres options added

TAG:  lib_py_report-5-0-0-2
TAG:  lib_py_report-5-0-0-1
DATE: 03/28/2012
STAFF: lec
CHANGES:
1) TR11027; changes for MGI 5.0
create_accession_anchor
create_imsrstrain_anchor

TAG:  lib_py_report-3-5-1-5
DATE: 10/25/2007
STAFF: lec
CHANGES:
1) add create_accession_anchor/isANCHOR

TAG:  lib_py_report-3-5-1-4
DATE: 10/25/2006
STAFF: lec
CHANGES:
1) remove reportlib.trailer()

TAG:  lib_py_report-3-5-1-3
DATE: 10/13/2006
STAFF: lec
CHANGES:
1) TR7943

TAG:  lib_py_report-3-5-1-2
DATE: 10/12/2006
STAFF: lec
CHANGES:
1) TR7943

TAG:  lib_py_report-3-5-1-1
DATE: 10/06/2006
STAFF: lec
CHANGES:
1) TR7943

TAG:  lib_py_report-3-5-0-2
DATE: 8/15/2006
STAFF: dbm
CHANGES:
1) Pick up Install script change

TAG: lib_py_report-3-5-0-1
DATE: 05/01/2006
STAFF: dbm
CHANGES:
1) Merge configuration changes from tr6549 branch

TAG: lib_py_report-tr6594-1
DATE: 3/27/2006
STAFF: dbm
CHANGES: Initial tag for TR6594 testing

TAG: lib_py_report-tr6594-BP
DATE: 3/16/2006
STAFF: dbm
CHANGES: Branch point tag for configuration changes
