@@ -1,3 +1,11 @@
+TAG: lib_py_report-6-0-6-?
+DATE: 08/08/2016
+STAFF: lec
+CHANGES:
+TR12349/gone-dor & more 
+TR12345/GPAD/GPI
+1) go_annot_extensions.py : add more properties to exlude list
+
 TAG: lib_py_report-6-0-4-2
 TAG: lib_py_reports-6-0-4-1
 DATE: 04/29/2016
